<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".HomeActivity"
    tools:openDrawer="start">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:theme="@style/NavigationStyle"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/home_menu" />

    <RelativeLayout

        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="monospace"
                android:text="@string/movie_streaming"
                android:textColor="@color/textColor"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btn_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                app:srcCompat="@drawable/ic_baseline_menu_24" />

        </RelativeLayout>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@color/colorPrimary" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:tabBackground="@drawable/bg_tabs"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        android:fontFamily="monospace"
                        android:text="Genres"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_more_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:fontFamily="monospace"
                        android:gravity="right"
                        android:text="More >"
                        android:textColor="@color/textColor"
                        android:textSize="12sp" />

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_viewer_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        android:fontFamily="monospace"
                        android:text="@string/top_movie_imdb"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_more_top_movie_imdb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:fontFamily="monospace"
                        android:gravity="right"
                        android:text="More >"
                        android:textColor="@color/textColor"
                        android:textSize="12sp" />

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_viewer_top_movie_imdb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        android:fontFamily="monospace"
                        android:text="@string/movie_2020"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_more_new_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:fontFamily="monospace"
                        android:gravity="right"
                        android:text="More >"
                        android:textColor="@color/textColor"
                        android:textSize="12sp" />

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_viewer_new_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        android:fontFamily="monospace"
                        android:text="@string/series"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_more_series"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:fontFamily="monospace"
                        android:gravity="right"
                        android:text="More >"
                        android:textColor="@color/textColor"
                        android:textSize="12sp" />

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_viewer_series"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        android:fontFamily="monospace"
                        android:text="@string/popular_movie"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_more_popular_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:fontFamily="monospace"
                        android:gravity="right"
                        android:text="More >"
                        android:textColor="@color/textColor"
                        android:textSize="12sp" />

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_viewer_popular_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="4.5"
                        android:fontFamily="monospace"
                        android:text="Animation"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_more_new_animation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:fontFamily="monospace"
                        android:gravity="right"
                        android:text="More >"
                        android:textColor="@color/textColor"
                        android:textSize="12sp" />

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_viewer_animation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />

            </LinearLayout>


        </ScrollView>

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>